ajoute une meta description

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,8 @@
 <html lang="fr-FR">
   <head>
     <meta name="viewport" content="initial-scale=1">
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
+    <meta name="description" content="{{ page.desc }}">
     <title>{{ page.title }}</title>
   </head>
   <body>
