pose la navigation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,13 +12,12 @@
       <a href="/"><img src="/images/Logo+Ada.png" alt="Ada Tech School"></a>
       <nav>
         <ul>
-          <li><a href="/">L'ÉCOLE</a></li>
-          <li><a href="/nouvel-index">LET'S MEET</a></li>
-          <li><a href="/manifesto">MANIFESTO</a></li>
+          <li><a href="/pedagogie">Pédagogie</a></li>
+          <li><a href="/manifesto">Manifesto</a></li>
         </ul>
       </nav>
 
-      <a href="/candidature">CANDIDATER</a>
+      <a href="/postuler">Candidater</a>
     </header>
 
     {{ content }}
